<?xml version="1.0" encoding="UTF-8" ?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>academy.softserve.edu</groupId>
    <artifactId>oms_test_framework</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <skipTests>false</skipTests>
        <selenium-java.version>2.53.1</selenium-java.version>
        <selenium-firefox-driver.version>2.53.1</selenium-firefox-driver.version>
        <selenium-chrome-driver.version>2.53.1</selenium-chrome-driver.version>
        <selenium-ie-driver.version>2.53.1</selenium-ie-driver.version>
        <selenium-api.version>2.53.1</selenium-api.version>
        <selenium-support.version>2.53.1</selenium-support.version>
        <selenium-remote-driver.version>2.53.1</selenium-remote-driver.version>
        <testng.version>6.9.10</testng.version>
        <mysql-connector-java.version>5.1.38</mysql-connector-java.version>
        <surefire-testng.version>2.19.1</surefire-testng.version>
        <org.apache.poi>3.14</org.apache.poi>
        <org.apache.poi-ooxml>3.14</org.apache.poi-ooxml>
        <reportng.version>1.1.4</reportng.version>
        <guice.version>4.1.0</guice.version>
        <lombok.version>1.16.10</lombok.version>
        <assertj-core.version>3.5.2</assertj-core.version>
    </properties>

    <profiles>
        <profile>
            <id>windows</id>
            <activation>
                <os>
                    <family>windows</family>
                </os>
            </activation>
            <properties>
                <script.extension>.bat</script.extension>
            </properties>
        </profile>
        <profile>
            <id>unix</id>
            <activation>
                <os>
                    <family>unix</family>
                </os>
            </activation>
            <properties>
                <script.extension>.sh</script.extension>
            </properties>
        </profile>
    </profiles>

    <build>
        <resources>
            <resource>
                <directory>src/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>

        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.5.0</version>
                <executions>
                    <execution>
                        <id>SQL_DUMP_SCRIPT</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>src/resources/scripts/execute_sql_dump${script.extension}</executable>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.19.1</version>

                <configuration>
                    <testFailureIgnore>true</testFailureIgnore>
                    <argLine>-Xmx1024m</argLine>
                    <testSourceDirectory>${basedir}/src/java/</testSourceDirectory>
                    <systemPropertyVariables>
                        <org.uncommons.reportng.escape-output>false</org.uncommons.reportng.escape-output>
                        <org.uncommons.reportng.title>Test Results</org.uncommons.reportng.title>
                    </systemPropertyVariables>
                    <properties>
                        <property>
                            <name>usedefaultlisteners</name>
                            <value>false</value>    <!-- disabling default listeners is optional -->
                        </property>
                        <property>
                            <name>listener</name>
                            <value>org.uncommons.reportng.HTMLReporter,
                                academy.softserve.edu.utils.TestListener
                            </value>
                        </property>
                    </properties>
                    <reportsDirectory>${project.basedir}/test-output</reportsDirectory>
                    <workingDirectory>${project.basedir}</workingDirectory>
                    <suiteXmlFiles>
                        <suiteXmlFile>src/resources/suites/administrator.xml</suiteXmlFile>
                        <suiteXmlFile>src/resources/suites/customer.xml</suiteXmlFile>
                        <suiteXmlFile>src/resources/suites/merchandiser.xml</suiteXmlFile>
                        <suiteXmlFile>src/resources/suites/supervisor.xml</suiteXmlFile>
                        <suiteXmlFile>src/resources/suites/others.xml</suiteXmlFile>
                    </suiteXmlFiles>
                </configuration>

                <dependencies>
                    <dependency>
                        <groupId>org.apache.maven.surefire</groupId>
                        <artifactId>surefire-testng</artifactId>
                        <version>${surefire-testng.version}</version>
                    </dependency>
                </dependencies>
            </plugin>
        </plugins>
    </build>

    <dependencies>

        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>${selenium-java.version}</version>
        </dependency>

        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>${mysql-connector-java.version}</version>
        </dependency>

        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-firefox-driver</artifactId>
            <version>${selenium-firefox-driver.version}</version>
        </dependency>

        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-chrome-driver</artifactId>
            <version>${selenium-chrome-driver.version}</version>
        </dependency>

        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-ie-driver</artifactId>
            <version>${selenium-ie-driver.version}</version>
        </dependency>

        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-api</artifactId>
            <version>${selenium-api.version}</version>
        </dependency>

        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-support</artifactId>
            <version>${selenium-support.version}</version>
        </dependency>

        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-remote-driver</artifactId>
            <version>${selenium-remote-driver.version}</version>
        </dependency>

        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>${testng.version}</version>
        </dependency>

        <dependency>
            <groupId>org.uncommons</groupId>
            <artifactId>reportng</artifactId>
            <version>${reportng.version}</version>
        </dependency>

        <dependency>
            <groupId>com.google.inject</groupId>
            <artifactId>guice</artifactId>
            <version>${guice.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi</artifactId>
            <version>${org.apache.poi}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi-ooxml</artifactId>
            <version>${org.apache.poi-ooxml}</version>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
        </dependency>

        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${assertj-core.version}</version>
        </dependency>

    </dependencies>

</project>